--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,6 @@ server:
     enabled: true
     key-store: classpath:keystore.p12
     key-store-password: 123456
-    key-alias: alias_name
+    key-alias: tomcat
     key-store-type: PKCS12
 
